# datmo

./: .datmo.vim  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
config/: datmo.rviz  default.rviz  experiment.rviz  screenshot.rviz  simulation.rviz
examples/: intersection.bag  overtake_ego.bag  overtake_red.bag  overtakes.bag  parallel.bag  two_robots.bag
launch/: .5_exp.launch.swp  circular.launch  datmo.launch  datmo_rviz.launch  example.launch  experiment.launch  screenshot.launch  sim_test.launch  simulation.launch  test.launch
msg/: Track.msg  TrackArray.msg
src/: cluster.cpp  cluster.h  cluster.hpp  datmo.cpp  datmo.h  datmo.hpp  l_shape_tracker.cpp  l_shape_tracker.hpp  l_shape_tracker_ukf.cpp  l_shape_tracker_ukf.hpp  main.cpp
src/kalman-cpp/: kalman.cpp  kalman.hpp
src/ukf/: filter_base.cpp  filter_base.h  filter_common.h  filter_utilities.cpp  ukf.cpp  ukf.h
