<?xml version="1.0"?>
<package format="2">
  <name>datmo</name>
  <version>0.0.0</version>
  <description>The lidar_tracking package</description>
  
  <author email="kostaskonkk@gmail.com">Kostas Konstantinidis</author> 
  <maintainer email="kostaskonkk@gmail.com">Kostas Konstantinidis</maintainer>

  <license>BSD</license>


   <url type="repository">https://github.com/kostaskonkk/datmo</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> -->



  <export>

  </export>
</package>
